--- a/wallet/res/values-ru/strings.xml
+++ b/wallet/res/values-ru/strings.xml
@@ -26,8 +26,8 @@
   <string name="wallet_transactions_fragment_tab_received">Получено</string>
   <string name="wallet_transactions_fragment_tab_all">Все</string>
   <string name="wallet_transactions_fragment_tab_sent">Отправлено</string>
-  <string name="wallet_transactions_fragment_empty_text_received">Ещё не получено Digitalcoin-монет</string>
-  <string name="wallet_transactions_fragment_empty_text_sent">Ещё не отправлено Digitalcoin-монет</string>
+  <string name="wallet_transactions_fragment_empty_text_received">Ещё не получено MaxCoin-монет</string>
+  <string name="wallet_transactions_fragment_empty_text_sent">Ещё не отправлено MaxCoin-монет</string>
   <string name="wallet_transactions_fragment_empty_text_howto">Как получить монеты?\n\nОбменяйте обычные деньги,\nпродайте товары и услуги или\nзаработайте.</string>
   <string name="wallet_transactions_row_warning_backup">Поздравляем, вы получили первый платёж! Вы уже &lt;u&gt;сделали резервную копию кошелька&lt;/u&gt;, чтобы обезопаситься от потерь?</string>
   <string name="wallet_transactions_fragment_coinbase">добыто</string>
@@ -50,7 +50,7 @@
   <string name="wallet_version_dialog_button_binary">Скачать</string>
   <string name="wallet_old_sdk_dialog_title">Версия для Android устарела</string>
   <string name="wallet_old_sdk_dialog_message">Ваше устройство скорее всего не будет поддерживаться следующей версией MaxCoin Wallet. В некоторых случаях, это может затруднить отправку с него монет.\n\nРекомендуется перенести монеты на другое устройство, если вы не уверены что можете с этим справиться.</string>
-  <string name="send_coins_activity_title">Отправка Digitalcoin</string>
+  <string name="send_coins_activity_title">Отправка MaxCoin</string>
   <string name="send_coins_fragment_request_payment_request_progress">Получение подписи %s…</string>
   <string name="send_coins_fragment_request_payment_request_failed_title">Ошибка при получении подписи</string>
   <string name="send_coins_fragment_request_payment_request_wrong_signature">Неверная подпись!</string>
@@ -58,7 +58,7 @@
   <string name="send_coins_fragment_payee_verified_by_unknown">неизвестно</string>
   <string name="send_coins_fragment_receiving_address_label">Оплатить</string>
   <string name="send_coins_fragment_receiving_address_hint">введите адрес или имя</string>
-  <string name="send_coins_fragment_receiving_address_error">Неправильный Digitalcoin-адрес!</string>
+  <string name="send_coins_fragment_receiving_address_error">Неправильный MaxCoin-адрес!</string>
   <string name="send_coins_fragment_receiving_address_complex">сложный\nадрес</string>
   <string name="send_coins_fragment_pending">(%s ожидание подтверждения)</string>
   <string name="send_coins_fragment_amount_label">Величина оплаты</string>
@@ -111,14 +111,14 @@
   <string name="maintenance_dialog_state_decrypting">Расшифровка…</string>
   <string name="maintenance_dialog_state_done">Готово.</string>
   <string name="maintenance_dialog_button_move">Переместить</string>
-  <string name="request_coins_activity_title">Запросить Digitalcoin-монеты</string>
+  <string name="request_coins_activity_title">Запросить MaxCoin-монеты</string>
   <string name="request_coins_fragment_amount_label">Запрашиваемая сумма (опционально)</string>
   <string name="request_coins_fragment_accept_bluetooth_payment">Приём платежей через Bluetooth для более надежной обработки транзакции</string>
   <string name="request_coins_fragment_initiate_request_qr">Пусть отправитель отсканирует этот код.</string>
   <string name="request_coins_fragment_initiate_request_nfc">Или коснитесь устройства с поддержкой NFC.</string>
-  <string name="request_coins_clipboard_msg">Запрос получения Digitalcoin-монет скопирован</string>
-  <string name="request_coins_share_dialog_title">Поделиться запросом Digitalcoin-монет…</string>
-  <string name="request_coins_no_local_app_msg">Не найдено других Digitalcoin приложений</string>
+  <string name="request_coins_clipboard_msg">Запрос получения MaxCoin-монет скопирован</string>
+  <string name="request_coins_share_dialog_title">Поделиться запросом MaxCoin-монет…</string>
+  <string name="request_coins_no_local_app_msg">Не найдено других MaxCoin приложений</string>
   <string name="request_coins_options_local_app_title">Запрос от локального приложения</string>
   <string name="address_book_activity_title">Адресная книга</string>
   <string name="address_book_list_receiving_title">Ваши адреса</string>
@@ -200,8 +200,8 @@
   <string name="scan_camera_problem_dialog_message">Проблема с камерой. Возможно, вам нужно перезагрузить устройство.</string>
   <string name="input_parser_io_error">Не могу считать данные:\n%s</string>
   <string name="input_parser_cannot_classify">Не могу распознать ввод:\n%s</string>
-  <string name="input_parser_invalid_bitcoin_uri">Неверный Digitalcoin URI:\n%s</string>
-  <string name="input_parser_invalid_address">Неверный адрес Digitalcoin!\n(Путаем основную сеть с тестовой?)</string>
+  <string name="input_parser_invalid_bitcoin_uri">Неверный MaxCoin URI:\n%s</string>
+  <string name="input_parser_invalid_address">Неверный адрес MaxCoin!\n(Путаем основную сеть с тестовой?)</string>
   <string name="input_parser_unverifyable_paymentrequest">Не могу проверить платежный запрос:\n%s</string>
   <string name="input_parser_invalid_paymentrequest">Неверный платежный запрос:\n%s</string>
   <string name="input_parser_invalid_transaction">Некорректная транзакция:\n%s</string>
