--- a/wallet/res/values-sk/strings.xml
+++ b/wallet/res/values-sk/strings.xml
@@ -53,7 +53,7 @@
 	<string name="send_coins_fragment_payee_verified_by_unknown">neznáme</string>
 	<string name="send_coins_fragment_receiving_address_label">Zaplatiť</string>
 	<string name="send_coins_fragment_receiving_address_hint">zadajte adresu alebo názov</string>
-	<string name="send_coins_fragment_receiving_address_error">Nesprávna Digitalcoin adresa!</string>
+	<string name="send_coins_fragment_receiving_address_error">Nesprávna MaxCoin adresa!</string>
 	<string name="send_coins_fragment_receiving_address_complex">komplexná\nadresa</string>
 	<string name="send_coins_fragment_pending">(%s čaká na potvrdenie)</string>
 	<string name="send_coins_fragment_amount_label">Suma</string>
