--- a/wallet/res/values/strings.xml
+++ b/wallet/res/values/strings.xml
@@ -12,7 +12,7 @@
 	<string name="blockchain_state_progress_stalled">Synchronization stalled</string>
 	<string name="blockchain_state_progress_problem_storage">Synchronizing: Storage problem</string>
 	<string name="blockchain_state_progress_problem_network">Synchronizing: Network problem</string>
-	<string name="wallet_address_fragment_clipboard_msg">Digitalcoin address copied to clipboard</string>
+	<string name="wallet_address_fragment_clipboard_msg">MaxCoin address copied to clipboard</string>
 	<string name="wallet_address_dialog_fragment_hint">To protect your privacy, your address will change once it receives a payment.</string>
 	<string name="wallet_balance_fragment_too_much">This amount is quite high for carrying in your pocket. Please move some to a safer place.</string>
 	<string name="wallet_balance_fragment_replaying">Balance is unavailable during replay.</string>
@@ -41,10 +41,10 @@
 	<string name="wallet_options_donate">Tip / donate</string>
 	<string name="wallet_donate_address_label">Donation for MaxCoin Wallet</string>
 	<string name="wallet_low_storage_dialog_title">Internal device storage space low!</string>
-	<string name="wallet_low_storage_dialog_msg">MaxCoin Wallet uses internal storage for remembering transactions and blocks. If it runs out of space, it will stop working and your Digitalcoins will be at risk!\n\nDo you want to open the Application Manager to uninstall unneeded apps?</string>
+	<string name="wallet_low_storage_dialog_msg">MaxCoin Wallet uses internal storage for remembering transactions and blocks. If it runs out of space, it will stop working and your MaxCoins will be at risk!\n\nDo you want to open the Application Manager to uninstall unneeded apps?</string>
 	<string name="wallet_low_storage_dialog_button_apps">Manage apps</string>
 	<string name="wallet_timeskew_dialog_title">Check your time settings!</string>
-	<string name="wallet_timeskew_dialog_msg">Your device time is off by %d minutes. You probably cannot send or receive Digitalcoins due to this problem.\n\nYou should check and correct your time and timezone settings.</string>
+	<string name="wallet_timeskew_dialog_msg">Your device time is off by %d minutes. You probably cannot send or receive MaxCoins due to this problem.\n\nYou should check and correct your time and timezone settings.</string>
 	<string name="wallet_version_dialog_title">A new version is available!</string>
 	<string name="wallet_version_dialog_msg">This version fixes important bugs. For details, see the change log on Google Play.</string>
 	<string name="wallet_version_dialog_msg_deprecated">If you don\'t see an update, this probably means your version of Android isn\'t supported any more.</string>
@@ -60,7 +60,7 @@
 	<string name="send_coins_fragment_payee_verified_by_unknown">unknown</string>
 	<string name="send_coins_fragment_receiving_address_label">Pay to</string>
 	<string name="send_coins_fragment_receiving_address_hint">type address or name</string>
-	<string name="send_coins_fragment_receiving_address_error">Invalid Digitalcoin address!</string>
+	<string name="send_coins_fragment_receiving_address_error">Invalid MaxCoin address!</string>
 	<string name="send_coins_fragment_receiving_address_complex">complex\naddress</string>
 	<string name="send_coins_fragment_pending">(%s waiting for confirmation)</string>
 	<string name="send_coins_fragment_amount_label">Amount to pay</string>
@@ -113,14 +113,14 @@
 	<string name="maintenance_dialog_state_decrypting">Decrypting…</string>
 	<string name="maintenance_dialog_state_done">Done.</string>
 	<string name="maintenance_dialog_button_move">Move</string>
-	<string name="request_coins_activity_title">Request Digitalcoins</string>
+	<string name="request_coins_activity_title">Request MaxCoins</string>
 	<string name="request_coins_fragment_amount_label">Requested amount (optional)</string>
 	<string name="request_coins_fragment_accept_bluetooth_payment">Accept payment via Bluetooth for more reliable processing</string>
 	<string name="request_coins_fragment_initiate_request_qr">Have this code scanned by the sender.</string>
 	<string name="request_coins_fragment_initiate_request_nfc">Or tap an NFC enabled device.</string>
-	<string name="request_coins_clipboard_msg">Digitalcoin request copied to clipboard</string>
-	<string name="request_coins_share_dialog_title">Share request for Digitalcoins…</string>
-	<string name="request_coins_no_local_app_msg">No other Digitalcoin app found</string>
+	<string name="request_coins_clipboard_msg">MaxCoin request copied to clipboard</string>
+	<string name="request_coins_share_dialog_title">Share request for MaxCoins…</string>
+	<string name="request_coins_no_local_app_msg">No other MaxCoin app found</string>
 	<string name="request_coins_options_local_app_title">Request from local app</string>
 	<string name="address_book_activity_title">Address book</string>
 	<string name="address_book_list_receiving_title">Your addresses</string>
@@ -205,7 +205,7 @@
 	<string name="scan_camera_problem_dialog_message">The camera has a problem. You probably need to restart the device.</string>
 	<string name="input_parser_io_error">Cannot read data:\n%s</string>
 	<string name="input_parser_cannot_classify">Cannot recognize input:\n%s</string>
-	<string name="input_parser_invalid_bitcoin_uri">Invalid Digitalcoin URI:\n%s</string>
+	<string name="input_parser_invalid_bitcoin_uri">Invalid MaxCoin URI:\n%s</string>
 	<string name="input_parser_invalid_address">Got invalid digitalcoin address!\n(Mixing up mainnet/testnet?)</string>
 	<string name="input_parser_unverifyable_paymentrequest">Cannot verify payment request:\n%s</string>
 	<string name="input_parser_invalid_paymentrequest">Invalid payment request:\n%s</string>
