--- a/wallet/README
+++ b/wallet/README
@@ -9,7 +9,7 @@ storage:
 	Testnet: /data/data/de.schildbach.wallet_test/files/wallet-protobuf-testnet (MODE_WORLD_READABLE | MODE_WORLD_WRITEABLE)
 
 The wallet file format is not compatible to wallet.dat (Satoshi client). Rather, it uses a custom protobuf format
-which should be compatible between clients using Digitalcoinj.
+which should be compatible between clients using MaxCoinj.
 
 Certain actions cause automatic rolling backups of your wallet to app-private storage:
 
@@ -174,19 +174,19 @@ Instructions for preparing an NFC tag with your address:
 
 - Some tags have less than 50 bytes capacity, those won't work. 1 KB tags recommended.
 
-- The tag needs to contain a Digitalcoin URI. You can construct one with the "Request coins" dialog,
+- The tag needs to contain a MaxCoin URI. You can construct one with the "Request coins" dialog,
   then share with messaging or email. You can also construct the URI manually. Example for Mainnet:
   digitalcoin:1G2Y2jP5YFZ5RGk2PXaeWwbeA5y1ZtFhoL
 
 - The type of the message needs to be URI or URL (not Text).
 
 - If you put your tag at a public place, don't forget to enable write protect. Otherwise, someone
-  could overwrite the tag with his own Digitalcoin address.
+  could overwrite the tag with his own MaxCoin address.
 
 
-DigitalcoinJ
+MaxCoinJ
 
-MaxCoin Wallet uses Digitalcoinj for digitalcoin specific logic:
+MaxCoin Wallet uses MaxCoinj for digitalcoin specific logic:
 
 	https://github.com/HashEngineering/digitalcoinj/
 
