--- a/wallet/res/values-cs/strings.xml
+++ b/wallet/res/values-cs/strings.xml
@@ -28,7 +28,7 @@
   <string name="wallet_transactions_fragment_tab_sent">Zasláno</string>
   <string name="wallet_transactions_fragment_empty_text_received">Zatím žádné digitalcoiny neobdrženy</string>
   <string name="wallet_transactions_fragment_empty_text_sent">Zatím žádné digitalcoiny neodeslány</string>
-  <string name="wallet_transactions_fragment_empty_text_howto">Jak získat Digitalcoiny?\n\nSměnou za klasické peníze,\nprodejem zboží nebo služeb\nnebo vyděláním prací.</string>
+  <string name="wallet_transactions_fragment_empty_text_howto">Jak získat MaxCoiny?\n\nSměnou za klasické peníze,\nprodejem zboží nebo služeb\nnebo vyděláním prací.</string>
   <string name="wallet_transactions_row_warning_backup">Gratulujeme, přijal jste vaši první platbu! Už jste si &lt;u&gt;zazálohoval vaši peněženku&lt;/u&gt;, aby jste se ochránil proti ztrátě?</string>
   <string name="wallet_transactions_fragment_coinbase">vytěženo</string>
   <string name="wallet_transactions_fragment_internal">interní</string>
@@ -39,18 +39,18 @@
   <string name="wallet_options_donate">Přispěj</string>
   <string name="wallet_donate_address_label">Dar pro MaxCoin Wallet</string>
   <string name="wallet_low_storage_dialog_title">Na vnitřním úložišti není dostatek místa!</string>
-  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet používá vnitřní úložiště pro ukládání transakcí a bloků. Pokud dojde místo v ůložišti, přestane fungovat a vaše Digitalcoiny jsou vystaveny riziku ztráty!\n\nChcete otevřít Správu Aplikací a odinstalovat nepotřebné aplikace?</string>
+  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet používá vnitřní úložiště pro ukládání transakcí a bloků. Pokud dojde místo v ůložišti, přestane fungovat a vaše MaxCoiny jsou vystaveny riziku ztráty!\n\nChcete otevřít Správu Aplikací a odinstalovat nepotřebné aplikace?</string>
   <string name="wallet_low_storage_dialog_button_apps">Spravovat aplikace</string>
   <string name="wallet_timeskew_dialog_title">Zkontrolujte vaše nastavení času!</string>
-  <string name="wallet_timeskew_dialog_msg">Čas vašeho přístroje vypnut %d minut. Asi nelze odesílat nebo přijímat Digitalcoiny v důsledku tohoto problému.\n\nMěli byste zkontrolovat a opravit váš čas a nastavení časového pásma.</string>
+  <string name="wallet_timeskew_dialog_msg">Čas vašeho přístroje vypnut %d minut. Asi nelze odesílat nebo přijímat MaxCoiny v důsledku tohoto problému.\n\nMěli byste zkontrolovat a opravit váš čas a nastavení časového pásma.</string>
   <string name="wallet_version_dialog_title">Je k dispozici nová verze!</string>
   <string name="wallet_version_dialog_msg">Tato verze opravuje důležité chyby. Podrobnosti naleznete v seznamu změn na Google Play.</string>
   <string name="wallet_version_dialog_msg_deprecated">Pokud nevidíte aktualizaci, znamená to, že verze vašeho Android operačního systému již není podporována.</string>
   <string name="wallet_version_dialog_button_market">Google Play</string>
   <string name="wallet_version_dialog_button_binary">Stáhnout</string>
   <string name="wallet_old_sdk_dialog_title">Android verze je příliš stará</string>
-  <string name="wallet_old_sdk_dialog_message">Je pravděpodobné, že jedna z následujících verzí MaxCoin Wallet nebude podporovat vaše zařízení. V některých případech může být v takové situaci komplikované utratit Digitalcoiny na tomto zařízení.\n\nPokud si nejste jistí co děláte, tak se vám doporučuje tyto Digitalcoiny přemístit brzy do jiného zařízení.</string>
-  <string name="send_coins_activity_title">Zaslat Digitalcoiny</string>
+  <string name="wallet_old_sdk_dialog_message">Je pravděpodobné, že jedna z následujících verzí MaxCoin Wallet nebude podporovat vaše zařízení. V některých případech může být v takové situaci komplikované utratit MaxCoiny na tomto zařízení.\n\nPokud si nejste jistí co děláte, tak se vám doporučuje tyto MaxCoiny přemístit brzy do jiného zařízení.</string>
+  <string name="send_coins_activity_title">Zaslat MaxCoiny</string>
   <string name="send_coins_fragment_request_payment_request_progress">Stahuji podpis z %s…</string>
   <string name="send_coins_fragment_request_payment_request_failed_title">Stahováni podpisu selhalo</string>
   <string name="send_coins_fragment_request_payment_request_wrong_signature">Špatný podpis!</string>
@@ -111,14 +111,14 @@
   <string name="maintenance_dialog_state_decrypting">Dešifruji…</string>
   <string name="maintenance_dialog_state_done">Hotovo.</string>
   <string name="maintenance_dialog_button_move">Přemístit</string>
-  <string name="request_coins_activity_title">Vyžádat Digitalcoiny</string>
+  <string name="request_coins_activity_title">Vyžádat MaxCoiny</string>
   <string name="request_coins_fragment_amount_label">Vyžadovaná částka (volitelně)</string>
   <string name="request_coins_fragment_accept_bluetooth_payment">Přijmout platbu pomocí Bluetooth</string>
   <string name="request_coins_fragment_initiate_request_qr">Nechte oskenovat tento kód odesílatelem.</string>
   <string name="request_coins_fragment_initiate_request_nfc">Nebo poklepejte na zařízení vybavené NFC.</string>
   <string name="request_coins_clipboard_msg">Požadavek na platbu zkopírován do schránky</string>
   <string name="request_coins_share_dialog_title">Sdílet požadavek na digitalcoiny…</string>
-  <string name="request_coins_no_local_app_msg">Žádná další Digitalcoin aplikace nebyla nalezena</string>
+  <string name="request_coins_no_local_app_msg">Žádná další MaxCoin aplikace nebyla nalezena</string>
   <string name="request_coins_options_local_app_title">Požadavek z lokální aplikace</string>
   <string name="address_book_activity_title">Adresář</string>
   <string name="address_book_list_receiving_title">Vaše adresy</string>
@@ -175,7 +175,7 @@
   <string name="export_keys_dialog_failure">Vaše peněženka nebyla zazálohována:\n%s</string>
   <string name="export_keys_dialog_button_archive">Archivovat</string>
   <string name="export_keys_dialog_mail_subject">MaxCoin Wallet záloha</string>
-  <string name="export_keys_dialog_mail_text">Připojený zašifrovaný soubor obsahuje Digitalcoin privátní klíče a měl by být vždy na bezpečném místě. Nezapomeňte šifrovací heslo!</string>
+  <string name="export_keys_dialog_mail_text">Připojený zašifrovaný soubor obsahuje MaxCoin privátní klíče a měl by být vždy na bezpečném místě. Nezapomeňte šifrovací heslo!</string>
   <string name="export_keys_dialog_mail_intent_chooser">Archivovat peněženku pomocí…</string>
   <string name="export_keys_dialog_mail_intent_failed">Archivace peněženky selhala.</string>
   <string name="import_export_keys_dialog_password">heslo</string>
@@ -200,7 +200,7 @@
   <string name="scan_camera_problem_dialog_message">Problém s kamerou. Pravděpodobně je potřeba aby jste zrestartoval zařízení.</string>
   <string name="input_parser_io_error">Nelze přečíst data:\n%s</string>
   <string name="input_parser_cannot_classify">Nelze rozpoznat vstup:\n%s</string>
-  <string name="input_parser_invalid_bitcoin_uri">Nevalidní Digitalcoin URI:\n%s</string>
+  <string name="input_parser_invalid_bitcoin_uri">Nevalidní MaxCoin URI:\n%s</string>
   <string name="input_parser_invalid_address">Obdržená neplatná digitalcoinová adresa!\n(Nemícháte mainnet/testnet?)</string>
   <string name="input_parser_unverifyable_paymentrequest">Nelze ověřit požadavek na platbu:\n%s</string>
   <string name="input_parser_invalid_paymentrequest">Neplatný požadavek na platbu:\n%s</string>
@@ -269,8 +269,8 @@
   <string name="button_paste">Vložit</string>
   <string name="button_share">Sdílet</string>
   <string name="button_set_as_default">Nastavit jako výchozí</string>
-  <string name="button_request_coins">Vyžádat Digitalcoiny</string>
-  <string name="button_send_coins">Zaslat Digitalcoiny</string>
+  <string name="button_request_coins">Vyžádat MaxCoiny</string>
+  <string name="button_send_coins">Zaslat MaxCoiny</string>
   <string name="button_scan">Skenovat</string>
   <string name="button_edit_address">Přidat/upravit adresu</string>
   <string name="button_settings">Nastavení</string>
