--- a/wallet/res/values-da/strings.xml
+++ b/wallet/res/values-da/strings.xml
@@ -11,7 +11,7 @@
   <string name="blockchain_state_progress_stalled">Synkronisering står stille</string>
   <string name="blockchain_state_progress_problem_storage">Synkroniserer: Pladsproblem</string>
   <string name="blockchain_state_progress_problem_network">Synkroniserer: Netærksproblem</string>
-  <string name="wallet_address_fragment_clipboard_msg">Digitalcoin-adresse kopieret til udklipsholder</string>
+  <string name="wallet_address_fragment_clipboard_msg">MaxCoin-adresse kopieret til udklipsholder</string>
   <string name="wallet_balance_fragment_too_much">Dette beløb er ret stort at gå rundt med i din lomme. Du bør flytte noget af det til et mere sikkert sted.</string>
   <string name="wallet_balance_fragment_replaying">Saldo er ikke tilgængelig under genafspilning.</string>
   <string name="exchange_rates_activity_title">Valutakurser</string>
@@ -39,7 +39,7 @@
   <string name="wallet_options_donate">Giv drikkepenge / donér</string>
   <string name="wallet_donate_address_label">Donér til MaxCoin Wallet</string>
   <string name="wallet_low_storage_dialog_title">Enheds interne lagerplads er lav!</string>
-  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet bruger intern lager til at huske transaktioner of blokke. Hvis den løber tør for plads, vil den stoppe med at virke og dine Digitalcoins vil risikeres!\n\nVil du åbne app-håndteringen for at afinstallere ubrugte apps?</string>
+  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet bruger intern lager til at huske transaktioner of blokke. Hvis den løber tør for plads, vil den stoppe med at virke og dine MaxCoins vil risikeres!\n\nVil du åbne app-håndteringen for at afinstallere ubrugte apps?</string>
   <string name="wallet_low_storage_dialog_button_apps">Håndtér apps</string>
   <string name="wallet_timeskew_dialog_title">Tjek dine tidsindstillinger!</string>
   <string name="wallet_timeskew_dialog_msg">Din enheds tid fraviger med %d minutter. Du kan sandsynligvis ikke sende eller modtage digitalcoins på grund af dette problem.\n\nDu bør tjekke og rette dine tids- og tidzoneindstillinger.</string>
@@ -50,7 +50,7 @@
   <string name="wallet_version_dialog_button_binary">Download</string>
   <string name="wallet_old_sdk_dialog_title">Android-version er uddateret</string>
   <string name="wallet_old_sdk_dialog_message">Der er risiko for, at en af de næste udgivelser af MaxCoin Wallet ikke vil understøtte din enhed længere. I nogle tilfælde kan det være svært at bruge mønter på denne enhed.\n\nMed mindre du ved hvad du gør, anbefales det snart at flytte dine mønter væk.</string>
-  <string name="send_coins_activity_title">Send Digitalcoins</string>
+  <string name="send_coins_activity_title">Send MaxCoins</string>
   <string name="send_coins_fragment_request_payment_request_progress">Henter signatur fra %s…</string>
   <string name="send_coins_fragment_request_payment_request_failed_title">Hentning af signatur mislykkedes</string>
   <string name="send_coins_fragment_request_payment_request_wrong_signature">Forkert signatur!</string>
@@ -58,7 +58,7 @@
   <string name="send_coins_fragment_payee_verified_by_unknown">ukendt</string>
   <string name="send_coins_fragment_receiving_address_label">Betal til</string>
   <string name="send_coins_fragment_receiving_address_hint">skriv adresse eller navn</string>
-  <string name="send_coins_fragment_receiving_address_error">Ugyldig Digitalcoin-adresse!</string>
+  <string name="send_coins_fragment_receiving_address_error">Ugyldig MaxCoin-adresse!</string>
   <string name="send_coins_fragment_receiving_address_complex">kompleks\nadresse</string>
   <string name="send_coins_fragment_pending">(%s venter på bekræftelse)</string>
   <string name="send_coins_fragment_amount_label">Beløb at betale</string>
@@ -111,14 +111,14 @@
   <string name="maintenance_dialog_state_decrypting">Afkrypterer …</string>
   <string name="maintenance_dialog_state_done">Færdig.</string>
   <string name="maintenance_dialog_button_move">Flyt</string>
-  <string name="request_coins_activity_title">Forespørg Digitalcoins</string>
+  <string name="request_coins_activity_title">Forespørg MaxCoins</string>
   <string name="request_coins_fragment_amount_label">Forespurgt beløb (valgfri)</string>
   <string name="request_coins_fragment_accept_bluetooth_payment">Modtag betaling via Bluetooth for mere pålidelig bearbejdning</string>
   <string name="request_coins_fragment_initiate_request_qr">Få afsenderen til at scanne denne kode.</string>
   <string name="request_coins_fragment_initiate_request_nfc">Eller berør en NFC-aktiveret enhed.</string>
-  <string name="request_coins_clipboard_msg">Digitalcoin-forespørgsel kopieret til udklipsholderen</string>
-  <string name="request_coins_share_dialog_title">Del forespørgsel efter Digitalcoins …</string>
-  <string name="request_coins_no_local_app_msg">Ingen anden Digitalcoin-app fundet</string>
+  <string name="request_coins_clipboard_msg">MaxCoin-forespørgsel kopieret til udklipsholderen</string>
+  <string name="request_coins_share_dialog_title">Del forespørgsel efter MaxCoins …</string>
+  <string name="request_coins_no_local_app_msg">Ingen anden MaxCoin-app fundet</string>
   <string name="request_coins_options_local_app_title">Forespørg fra lokal app</string>
   <string name="address_book_activity_title">Adressebog</string>
   <string name="address_book_list_receiving_title">Dine adresser</string>
@@ -200,7 +200,7 @@
   <string name="scan_camera_problem_dialog_message">Der er et problem med kameraet. En gentstart af enheden er sandsynligvis nødvendig.</string>
   <string name="input_parser_io_error">Kan ikke læse data:\n%s</string>
   <string name="input_parser_cannot_classify">Kan ikke genkende input:\n%s</string>
-  <string name="input_parser_invalid_bitcoin_uri">Ugyldig Digitalcoin-URI:\n%s</string>
+  <string name="input_parser_invalid_bitcoin_uri">Ugyldig MaxCoin-URI:\n%s</string>
   <string name="input_parser_invalid_address">Modtog ugyldig digitalcoin-adresse!\n(Forveksler du mainnet/testnet?)</string>
   <string name="input_parser_unverifyable_paymentrequest">Kan ikke verificere betalingsforespørgsel:\n%s</string>
   <string name="input_parser_invalid_paymentrequest">Ugyldig betalingsforespørgsel:\n%s</string>
