--- a/wallet/res/values-fi/strings.xml
+++ b/wallet/res/values-fi/strings.xml
@@ -11,7 +11,7 @@
   <string name="blockchain_state_progress_stalled">Synkronointi pysäytetty</string>
   <string name="blockchain_state_progress_problem_storage">Synkronointi: Tilaongelma</string>
   <string name="blockchain_state_progress_problem_network">Synkronointi: Verkko-ongelma</string>
-  <string name="wallet_address_fragment_clipboard_msg">Digitalcoin-osoite on kopioitu leikepöydälle</string>
+  <string name="wallet_address_fragment_clipboard_msg">MaxCoin-osoite on kopioitu leikepöydälle</string>
   <string name="wallet_balance_fragment_too_much">Tämä määrä on melko suuri kannettavaksi taskussasi. Siirrä se johonkin turvallisempaan paikkaan.</string>
   <string name="wallet_balance_fragment_replaying">Saldo ei ole saatavilla uusinnan aikaan.</string>
   <string name="exchange_rates_activity_title">Vaihtokurssit:</string>
@@ -26,9 +26,9 @@
   <string name="wallet_transactions_fragment_tab_received">Vastaanotettu</string>
   <string name="wallet_transactions_fragment_tab_all">Molemmat</string>
   <string name="wallet_transactions_fragment_tab_sent">Lähetetty</string>
-  <string name="wallet_transactions_fragment_empty_text_received">Digitalcoineja ei ole vielä vastaanotettu.</string>
-  <string name="wallet_transactions_fragment_empty_text_sent">Digitalcoineja ei ole vielä lähetetty.</string>
-  <string name="wallet_transactions_fragment_empty_text_howto">Kuinka saada Digitalcoineja?\nVaihda perinteiseen rahaan,\nmyy tuotteita tai palveluita\ntai tienaa työskentelemällä.</string>
+  <string name="wallet_transactions_fragment_empty_text_received">MaxCoineja ei ole vielä vastaanotettu.</string>
+  <string name="wallet_transactions_fragment_empty_text_sent">MaxCoineja ei ole vielä lähetetty.</string>
+  <string name="wallet_transactions_fragment_empty_text_howto">Kuinka saada MaxCoineja?\nVaihda perinteiseen rahaan,\nmyy tuotteita tai palveluita\ntai tienaa työskentelemällä.</string>
   <string name="wallet_transactions_row_warning_backup">Onnittelut, olet vastaanottanut ensimmäisen rahansiirtosi! Onko sinulla jo &lt;u&gt;varmuuskopio lompakostasi&lt;/u&gt; suojataksesi sitä katoamiselta?</string>
   <string name="wallet_transactions_fragment_coinbase">louhittu</string>
   <string name="wallet_transactions_fragment_internal">sisäinen</string>
@@ -39,10 +39,10 @@
   <string name="wallet_options_donate">Anna tippi tai lahjoita</string>
   <string name="wallet_donate_address_label">Lahjoitus MaxCoin Walletille</string>
   <string name="wallet_low_storage_dialog_title">Sisäinen tallennustila on vähissä!</string>
-  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet käyttää sisäistä tallennustilaa muistaakseen varainsiirrot ja lohkot. Jos se ei saa tarpeeksi tallennustilaa, se lakkaa toimimasta ja Digitalcoinisi ovat silloin vaarassa!\n\nHaluatko avata ohjelmien hallinan poistaaksesi tarpeettomia ohjelmia?</string>
+  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet käyttää sisäistä tallennustilaa muistaakseen varainsiirrot ja lohkot. Jos se ei saa tarpeeksi tallennustilaa, se lakkaa toimimasta ja MaxCoinisi ovat silloin vaarassa!\n\nHaluatko avata ohjelmien hallinan poistaaksesi tarpeettomia ohjelmia?</string>
   <string name="wallet_low_storage_dialog_button_apps">Hallitse ohjelmia</string>
   <string name="wallet_timeskew_dialog_title">Tarkista järjestelmän kellonaika ja päivämäärä!</string>
-  <string name="wallet_timeskew_dialog_msg">Laitteesi kello heittää %d minuuttia. Et välttämättä voi lähettää tai vastaanottaa Digitalcoineja tämän ongelman johdosta.\n\nSinun tulisi tarkistaa ja päivittää aikasi sekä aikavyöhykeasetuksesi.</string>
+  <string name="wallet_timeskew_dialog_msg">Laitteesi kello heittää %d minuuttia. Et välttämättä voi lähettää tai vastaanottaa MaxCoineja tämän ongelman johdosta.\n\nSinun tulisi tarkistaa ja päivittää aikasi sekä aikavyöhykeasetuksesi.</string>
   <string name="wallet_version_dialog_title">Uusi versio saatavilla!</string>
   <string name="wallet_version_dialog_msg">Tämä versio korjaa tärkeitä ongelmia. Lisätietoja saadaksesi, kirjaudu Google Play-palveluun.</string>
   <string name="wallet_version_dialog_msg_deprecated">Jos et näe päivitystä, se ehkä tarkoittaa että laitteesi Androidin versio ei ole enää tuettu.</string>
@@ -50,7 +50,7 @@
   <string name="wallet_version_dialog_button_binary">Lataa</string>
   <string name="wallet_old_sdk_dialog_title">Android-versio ei ole ajan tasalla</string>
   <string name="wallet_old_sdk_dialog_message">On mahdollisuus että MaxCoin Walletin seuraava versio ei enää tue laitettasi. Joissakin tapauksissa kolikoiden käyttäö voi hankaloitua tässä laitteessa.\n\nMikäli et tiedä mitä teet, on suositeltavaa siirtää kolikkosi muualle pian.</string>
-  <string name="send_coins_activity_title">Lähetä Digitalcoineja</string>
+  <string name="send_coins_activity_title">Lähetä MaxCoineja</string>
   <string name="send_coins_fragment_request_payment_request_progress">Saadaan allekirjoitus osoitteesta %s…</string>
   <string name="send_coins_fragment_request_payment_request_failed_title">Allekirjoituksen saanti epäonnistui</string>
   <string name="send_coins_fragment_request_payment_request_wrong_signature">Väärä allekirjoitus!</string>
@@ -58,7 +58,7 @@
   <string name="send_coins_fragment_payee_verified_by_unknown">tuntematon</string>
   <string name="send_coins_fragment_receiving_address_label">Vastaanottaja</string>
   <string name="send_coins_fragment_receiving_address_hint">kirjoita osoite tai nimi</string>
-  <string name="send_coins_fragment_receiving_address_error">Epäkelpo Digitalcoin-osoite!</string>
+  <string name="send_coins_fragment_receiving_address_error">Epäkelpo MaxCoin-osoite!</string>
   <string name="send_coins_fragment_receiving_address_complex">monimutkainen\nosoite</string>
   <string name="send_coins_fragment_pending">(%s odottaa vahvistusta)</string>
   <string name="send_coins_fragment_amount_label">Maksettava määrä</string>
@@ -111,14 +111,14 @@
   <string name="maintenance_dialog_state_decrypting">Puretaan salausta…</string>
   <string name="maintenance_dialog_state_done">Valmis.</string>
   <string name="maintenance_dialog_button_move">Siirrä</string>
-  <string name="request_coins_activity_title">Vastaanota Digitalcoineja</string>
+  <string name="request_coins_activity_title">Vastaanota MaxCoineja</string>
   <string name="request_coins_fragment_amount_label">Vastaanotettava määrä (valinnainen)</string>
   <string name="request_coins_fragment_accept_bluetooth_payment">Hyväksy maksu Bluetoothin välityksellä luotettavamman siirron takaamiseksi</string>
   <string name="request_coins_fragment_initiate_request_qr">Anna lähettäjän skannata tämä koodi.</string>
   <string name="request_coins_fragment_initiate_request_nfc">Tai yhdistä NFC-laitteeseen.</string>
-  <string name="request_coins_clipboard_msg">Digitalcoin-pyyntö kopioitu leikepöydälle</string>
-  <string name="request_coins_share_dialog_title">Jaa Digitalcoin-pyyntö</string>
-  <string name="request_coins_no_local_app_msg">Ei löydetty toista Digitalcoin-asiakasohjelmaa</string>
+  <string name="request_coins_clipboard_msg">MaxCoin-pyyntö kopioitu leikepöydälle</string>
+  <string name="request_coins_share_dialog_title">Jaa MaxCoin-pyyntö</string>
+  <string name="request_coins_no_local_app_msg">Ei löydetty toista MaxCoin-asiakasohjelmaa</string>
   <string name="request_coins_options_local_app_title">Pyyntö paikalliselta sovellukselta</string>
   <string name="address_book_activity_title">Osoitekirja</string>
   <string name="address_book_list_receiving_title">Oma osoitteesi</string>
@@ -200,8 +200,8 @@
   <string name="scan_camera_problem_dialog_message">Kameran kanssa on ongelma. Sinun on luultavasti uudelleenkäynnistettävä laitteesi</string>
   <string name="input_parser_io_error">Ei voida lukea dataa:\n%s</string>
   <string name="input_parser_cannot_classify">Ei voida tunnistaa syötettä:\n%s</string>
-  <string name="input_parser_invalid_bitcoin_uri">Epäkelpo Digitalcoin-URI:\n%s</string>
-  <string name="input_parser_invalid_address">Saatiin epäkelpo Digitalcoin-osoite!\n(Sekoitatko mainnet/testnet?)</string>
+  <string name="input_parser_invalid_bitcoin_uri">Epäkelpo MaxCoin-URI:\n%s</string>
+  <string name="input_parser_invalid_address">Saatiin epäkelpo MaxCoin-osoite!\n(Sekoitatko mainnet/testnet?)</string>
   <string name="input_parser_unverifyable_paymentrequest">Ei voitu vahvistaa maksupyyntöä:\n%s</string>
   <string name="input_parser_invalid_paymentrequest">Epäkelpo maksupyyntö:\n%s</string>
   <string name="input_parser_invalid_transaction">Epäkelpo rahansiirto:\n%s</string>
