--- a/wallet/res/values-id/strings.xml
+++ b/wallet/res/values-id/strings.xml
@@ -12,7 +12,7 @@
 	<string name="blockchain_state_progress_stalled">Sinkronisasi terhenti</string>
 	<string name="blockchain_state_progress_problem_storage">Sinkronisasi: Masalah penyimpanan</string>
 	<string name="blockchain_state_progress_problem_network">Sinkronisasi: Masalah jaringan</string>
-	<string name="wallet_address_fragment_clipboard_msg">Alamat Digitalcoin disalin</string>
+	<string name="wallet_address_fragment_clipboard_msg">Alamat MaxCoin disalin</string>
 	<string name="wallet_balance_fragment_replaying">Saldo tidak tersedia saat pengulangan.</string>
 	<string name="exchange_rates_activity_title">Nilai Tukar</string>
 	<string name="exchange_rates_fragment_empty_text">Tidak dapat memuat nilai tukar</string>
@@ -49,7 +49,7 @@
 	<string name="send_coins_activity_title">Kirim digitalcoin</string>
 	<string name="send_coins_fragment_receiving_address_label">Bayar ke</string>
 	<string name="send_coins_fragment_receiving_address_hint">masukkan alamat atau nama</string>
-	<string name="send_coins_fragment_receiving_address_error">Alamat Digitalcoin Salah!</string>
+	<string name="send_coins_fragment_receiving_address_error">Alamat MaxCoin Salah!</string>
 	<string name="send_coins_fragment_pending">(%s menunggu konfirmasi)</string>
 	<string name="send_coins_fragment_amount_label">Jumlah pembayaran</string>
 	<string name="send_coins_fragment_button_send">Kirim</string>
