--- a/wallet/res/values-it/strings.xml
+++ b/wallet/res/values-it/strings.xml
@@ -11,7 +11,7 @@
   <string name="blockchain_state_progress_stalled">Sincronizzazione bloccata</string>
   <string name="blockchain_state_progress_problem_storage">Sincronizzazione: problema di Memorizzazione</string>
   <string name="blockchain_state_progress_problem_network">Sincronizzazione: problema di Rete</string>
-  <string name="wallet_address_fragment_clipboard_msg">Indirizzo Digitalcoin copiato negli appunti</string>
+  <string name="wallet_address_fragment_clipboard_msg">Indirizzo MaxCoin copiato negli appunti</string>
   <string name="wallet_balance_fragment_too_much">Questo importo è alto per essere portato con se. Si prega di spostarne alcuni in un luogo più sicuro.</string>
   <string name="wallet_balance_fragment_replaying">Il conto non è disponibile durante la ripetizione.</string>
   <string name="exchange_rates_activity_title">Tasso di cambio</string>
@@ -26,9 +26,9 @@
   <string name="wallet_transactions_fragment_tab_received">Ricevuto</string>
   <string name="wallet_transactions_fragment_tab_all">Entrambi</string>
   <string name="wallet_transactions_fragment_tab_sent">Inviato</string>
-  <string name="wallet_transactions_fragment_empty_text_received">Nessun Digitalcoin ancora ricevuto</string>
-  <string name="wallet_transactions_fragment_empty_text_sent">Nessun Digitalcoin ancora inviato</string>
-  <string name="wallet_transactions_fragment_empty_text_howto">Come ottenere Digitalcoins?\n\nBarattali per soldi reali,\nvendi beni o servizi oppure\nricavali lavorando.</string>
+  <string name="wallet_transactions_fragment_empty_text_received">Nessun MaxCoin ancora ricevuto</string>
+  <string name="wallet_transactions_fragment_empty_text_sent">Nessun MaxCoin ancora inviato</string>
+  <string name="wallet_transactions_fragment_empty_text_howto">Come ottenere MaxCoins?\n\nBarattali per soldi reali,\nvendi beni o servizi oppure\nricavali lavorando.</string>
   <string name="wallet_transactions_row_warning_backup">Congratulazioni, hai ricevuto i tuoi primi pagamenti! Hai già &lt;u&gt;eseguito un backup del tuo portafoglio &lt;/u&gt;, per proteggerlo dai danni?</string>
   <string name="wallet_transactions_fragment_coinbase">minato</string>
   <string name="wallet_transactions_fragment_internal">Interna</string>
@@ -39,18 +39,18 @@
   <string name="wallet_options_donate">Mancia / donazione</string>
   <string name="wallet_donate_address_label">Donazione per MaxCoin Wallet</string>
   <string name="wallet_low_storage_dialog_title">Lo spazio interno del dispositivo è basso!</string>
-  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet usa lo spazio interno per ricordarsi le transizioni e i blocchi. Se non hai più spazio, l\'applicazione smetterà di funzionare e i tuoi Digitalcoin saranno a rischio!\n\nVuoi aprire il gestore delle applicazioni per disinstallare le applicazioni inutili/non necessarie?</string>
+  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet usa lo spazio interno per ricordarsi le transizioni e i blocchi. Se non hai più spazio, l\'applicazione smetterà di funzionare e i tuoi MaxCoin saranno a rischio!\n\nVuoi aprire il gestore delle applicazioni per disinstallare le applicazioni inutili/non necessarie?</string>
   <string name="wallet_low_storage_dialog_button_apps">Gestisci applicazioni</string>
   <string name="wallet_timeskew_dialog_title">Controlla data e ora!</string>
-  <string name="wallet_timeskew_dialog_msg">Il tuo dispositivo è spento da %d minuti. Probabilmente non puoi inviare ne ricevere Digitalcoins per via di questo problema.\n\nDevi controllare e correggere l\'ora e il fuso orario del tuo dispositivo.</string>
+  <string name="wallet_timeskew_dialog_msg">Il tuo dispositivo è spento da %d minuti. Probabilmente non puoi inviare ne ricevere MaxCoins per via di questo problema.\n\nDevi controllare e correggere l\'ora e il fuso orario del tuo dispositivo.</string>
   <string name="wallet_version_dialog_title">Una nuova versione è disponibile!</string>
   <string name="wallet_version_dialog_msg">Questa versione ha corretto bug importanti. Per dettagli, guarda il change log su Google Play.</string>
   <string name="wallet_version_dialog_msg_deprecated">Se non si vede un aggiornamento, questo probabilmente significa che la vostra versione di Android non è più supportata.</string>
   <string name="wallet_version_dialog_button_market">Google Play</string>
   <string name="wallet_version_dialog_button_binary">Scarica</string>
   <string name="wallet_old_sdk_dialog_title">La versione Android non è aggiornata</string>
-  <string name="wallet_old_sdk_dialog_message">Potrebbe essere che le prossime versioni di MaxCoin Wallet non supporterà più il tuo dispositivo. In questi casi, potrebbe essere difficile spendere i Digitalcoin su questo dispositivo.\n\nA meno che tu non sappia quello che stai facendo, ti raccomandiamo di spostare il tuo denaro al più presto.</string>
-  <string name="send_coins_activity_title">Invia Digitalcoins</string>
+  <string name="wallet_old_sdk_dialog_message">Potrebbe essere che le prossime versioni di MaxCoin Wallet non supporterà più il tuo dispositivo. In questi casi, potrebbe essere difficile spendere i MaxCoin su questo dispositivo.\n\nA meno che tu non sappia quello che stai facendo, ti raccomandiamo di spostare il tuo denaro al più presto.</string>
+  <string name="send_coins_activity_title">Invia MaxCoins</string>
   <string name="send_coins_fragment_request_payment_request_progress">Acquisizione firma da %s…</string>
   <string name="send_coins_fragment_request_payment_request_failed_title">Acquisizione firma fallita</string>
   <string name="send_coins_fragment_request_payment_request_wrong_signature">Firma errata!</string>
@@ -58,7 +58,7 @@
   <string name="send_coins_fragment_payee_verified_by_unknown">sconosciuto</string>
   <string name="send_coins_fragment_receiving_address_label">Paga a</string>
   <string name="send_coins_fragment_receiving_address_hint">inserisci indirizzo o nome</string>
-  <string name="send_coins_fragment_receiving_address_error">Indirizzo Digitalcoin errato!</string>
+  <string name="send_coins_fragment_receiving_address_error">Indirizzo MaxCoin errato!</string>
   <string name="send_coins_fragment_receiving_address_complex">completo\nindirizzo</string>
   <string name="send_coins_fragment_pending">(%s in attesa di conferma)</string>
   <string name="send_coins_fragment_amount_label">Importo da pagare</string>
@@ -84,7 +84,7 @@
   <string name="send_coins_sending_msg">Invio in corso…</string>
   <string name="send_coins_sent_msg">Inviato!</string>
   <string name="send_coins_failed_msg">Fallito!</string>
-  <string name="send_coins_error_msg">Problemi durante l\'invio dei Digitalcoins!</string>
+  <string name="send_coins_error_msg">Problemi durante l\'invio dei MaxCoins!</string>
   <string name="send_coins_options_priority">Conferma veloce, tasse alte</string>
   <string name="send_coins_options_empty">Portafoglio vuoto</string>
   <string name="send_coins_address_context_clear_title">Inserisci nuovo indirizzo</string>
@@ -111,14 +111,14 @@
   <string name="maintenance_dialog_state_decrypting">Decrittazione in corso…</string>
   <string name="maintenance_dialog_state_done">Fatto.</string>
   <string name="maintenance_dialog_button_move">Sposta</string>
-  <string name="request_coins_activity_title">Richiedi Digitalcoins</string>
+  <string name="request_coins_activity_title">Richiedi MaxCoins</string>
   <string name="request_coins_fragment_amount_label">Importo richiesto (opzionale)</string>
   <string name="request_coins_fragment_accept_bluetooth_payment">Accettazione pagamento via Bluetooth per un procedimento più affidabile</string>
   <string name="request_coins_fragment_initiate_request_qr">Questo codice deve essere scansionato dal mittente.</string>
   <string name="request_coins_fragment_initiate_request_nfc">Oppure tocca un dispositivo abilitato per NFC.</string>
-  <string name="request_coins_clipboard_msg">Richiesta Digitalcoin copiata negli appunti</string>
-  <string name="request_coins_share_dialog_title">Condividi richiesta di Digitalcoins…</string>
-  <string name="request_coins_no_local_app_msg">Nessun\'altra applicazione Digitalcoin trovata</string>
+  <string name="request_coins_clipboard_msg">Richiesta MaxCoin copiata negli appunti</string>
+  <string name="request_coins_share_dialog_title">Condividi richiesta di MaxCoins…</string>
+  <string name="request_coins_no_local_app_msg">Nessun\'altra applicazione MaxCoin trovata</string>
   <string name="request_coins_options_local_app_title">Richiesta dall\'app locale</string>
   <string name="address_book_activity_title">Rubrica</string>
   <string name="address_book_list_receiving_title">I tuoi indirizzi</string>
@@ -200,7 +200,7 @@
   <string name="scan_camera_problem_dialog_message">La videocamera ha un problema. Probabilmente è necessario riavviare il dispositivo.</string>
   <string name="input_parser_io_error">Impossibile leggere i dati:\n%s</string>
   <string name="input_parser_cannot_classify">Impossibile classificare l\'input:\n%s</string>
-  <string name="input_parser_invalid_bitcoin_uri">URI Digitalcoin errato:\n%s</string>
+  <string name="input_parser_invalid_bitcoin_uri">URI MaxCoin errato:\n%s</string>
   <string name="input_parser_invalid_address">Ricevuto indirizzo digitalcoin non valido!\n(Hai mescolato la mainnet con la testnet?)</string>
   <string name="input_parser_unverifyable_paymentrequest">Impossibile verificare la richiesta di pagamento:\%s</string>
   <string name="input_parser_invalid_paymentrequest">Richiesta di pagamento invalida:\n%s</string>
