--- a/wallet/res/values-sq/strings.xml
+++ b/wallet/res/values-sq/strings.xml
@@ -11,7 +11,7 @@
   <string name="blockchain_state_progress_stalled">Sinkronizimi ka ngecur</string>
   <string name="blockchain_state_progress_problem_storage">Sinkronizimi: Problem në ruajtje</string>
   <string name="blockchain_state_progress_problem_network">Sinkronizimi: Problem me rrjetin</string>
-  <string name="wallet_address_fragment_clipboard_msg">Adresa juaj e Digitalcoin u kopjua</string>
+  <string name="wallet_address_fragment_clipboard_msg">Adresa juaj e MaxCoin u kopjua</string>
   <string name="wallet_address_dialog_fragment_hint">Për të ruajtur privaticitetin, adresa juaj do të ndërrohet çdo herë që pranoni një pages.</string>
   <string name="wallet_balance_fragment_too_much">Kjo shumë është e madhe për tu mbajtur nê xhep. Ju lutem zhvendosni disa monedha në një vend më të sigurt.</string>
   <string name="wallet_balance_fragment_replaying">Bilanci nuk mund të shikohet gjatë përseritjes.</string>
@@ -27,9 +27,9 @@
   <string name="wallet_transactions_fragment_tab_received">Pranuar</string>
   <string name="wallet_transactions_fragment_tab_all">Të dyjat</string>
   <string name="wallet_transactions_fragment_tab_sent">Dërguar</string>
-  <string name="wallet_transactions_fragment_empty_text_received">Nuk keni pranuar asnjë Digitalcoin deri më tani</string>
-  <string name="wallet_transactions_fragment_empty_text_sent">Nuk keni dërguar asnjë Digitalcoin deri me tani</string>
-  <string name="wallet_transactions_fragment_empty_text_howto">Si të merrni Digitalcoins?\n\nKëmbeni me para tradicionale,\shitni gjëra apo shërbime ose\nfito duke punuar.</string>
+  <string name="wallet_transactions_fragment_empty_text_received">Nuk keni pranuar asnjë MaxCoin deri më tani</string>
+  <string name="wallet_transactions_fragment_empty_text_sent">Nuk keni dërguar asnjë MaxCoin deri me tani</string>
+  <string name="wallet_transactions_fragment_empty_text_howto">Si të merrni MaxCoins?\n\nKëmbeni me para tradicionale,\shitni gjëra apo shërbime ose\nfito duke punuar.</string>
   <string name="wallet_transactions_row_warning_backup">Urime, ju sapo keni pranuar pagesën e parë! E keni &lt;u&gt;ruajtur një kopje rezervë të kuletës suaj tashmë, për ta mbrojutur ne rast humbjeje? </string>
   <string name="wallet_transactions_fragment_internal">interne</string>
   <string name="wallet_options_safety_menu">Siguria</string>
@@ -37,12 +37,12 @@
   <string name="wallet_options_encrypt_keys_change">Ndryshoni PIN-in</string>
   <string name="wallet_options_safety">Shënime të sigurisë</string>
   <string name="wallet_options_donate">Bakshish / Donacion</string>
-  <string name="wallet_donate_address_label">Donacion për Kuletën Digitalcoin</string>
+  <string name="wallet_donate_address_label">Donacion për Kuletën MaxCoin</string>
   <string name="wallet_low_storage_dialog_title">Hapësira e diskut në pajisjen tuaj është e ulët!</string>
   <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet përdor memorjen interne për të ruajtur transaksionet dhe blloqet. Nëse nuk ka hapsir të mjaftueshme, nuk do të punoj dhe monedhat tuaja do jenë ne rrezik!\n\nDëshironi të hapni Menagjerin e Aplikacioneve dhe të fshini aplikacionet që nuk ju duhen?</string>
   <string name="wallet_low_storage_dialog_button_apps">Menaxhoni programet</string>
   <string name="wallet_timeskew_dialog_title">Kontrolloni kohën tuaj!</string>
-  <string name="wallet_timeskew_dialog_msg">Ora juaj është gabim për %d minuta. Ju ndoshta nuk mund të pranoni apo dërgoni Digitalcoins për shkak të këtij problemi.\n\nJu duhet të kontrolloni dhe korrigjoni orën dhe kohën zonale.</string>
+  <string name="wallet_timeskew_dialog_msg">Ora juaj është gabim për %d minuta. Ju ndoshta nuk mund të pranoni apo dërgoni MaxCoins për shkak të këtij problemi.\n\nJu duhet të kontrolloni dhe korrigjoni orën dhe kohën zonale.</string>
   <string name="wallet_version_dialog_title">Një verzion i ri është në dispozicion!</string>
   <string name="wallet_version_dialog_msg">Në këtë verzion janë përmirësuar disa gabime. Për më shumë hollësira kyçuni në Google Play.</string>
   <string name="wallet_version_dialog_msg_deprecated">Nëse nuk e shiheni ndonjë aktualizim, shkaku është se versioni juaj i Androidit nuk është më aktual.</string>
@@ -50,13 +50,13 @@
   <string name="wallet_version_dialog_button_binary">Shkarkoni</string>
   <string name="wallet_old_sdk_dialog_title">Versioni i Androidit nuk është aktual</string>
   <string name="wallet_old_sdk_dialog_message">Mundësit janë që në verzionet e ardhshme të MaxCoin Wallet nuk do të mbështes paisjen tuaj. Në disa raste, mund të jetë e vështir që të shpenzohen monedhat në këtë paisje.\n\nVetëm në rast se dini cfarë po bëni, është e rekomanduar që të zhvendosni monedhat tuaja në një kulet tjetër.</string>
-  <string name="send_coins_activity_title">Dërgo Digitalcoins</string>
+  <string name="send_coins_activity_title">Dërgo MaxCoins</string>
   <string name="send_coins_fragment_request_payment_request_wrong_signature">Nënshkrim i gabuar!</string>
   <string name="send_coins_fragment_payee_verified_by">verifikuar nga %s</string>
   <string name="send_coins_fragment_payee_verified_by_unknown">panjohur</string>
   <string name="send_coins_fragment_receiving_address_label">Paguani tek</string>
   <string name="send_coins_fragment_receiving_address_hint">shënoni adresën ose emrin</string>
-  <string name="send_coins_fragment_receiving_address_error">Adresa e Digitalcoin e gabuar!</string>
+  <string name="send_coins_fragment_receiving_address_error">Adresa e MaxCoin e gabuar!</string>
   <string name="send_coins_fragment_receiving_address_complex">kompleks\nadresa</string>
   <string name="send_coins_fragment_pending">(%s pret konfirmimin)</string>
   <string name="send_coins_fragment_amount_label">Shuma për të paguar</string>
@@ -108,13 +108,13 @@
   <string name="maintenance_dialog_state_decrypting">Duke dekriptuar…</string>
   <string name="maintenance_dialog_state_done">I përfunduar.</string>
   <string name="maintenance_dialog_button_move">Lëviz</string>
-  <string name="request_coins_activity_title">Kërko Digitalcoins</string>
+  <string name="request_coins_activity_title">Kërko MaxCoins</string>
   <string name="request_coins_fragment_amount_label">Shuma e kërkuar (opsionale)</string>
   <string name="request_coins_fragment_accept_bluetooth_payment">Prano pagesën përmes Bluetooth për procesim më të sigurt</string>
   <string name="request_coins_fragment_initiate_request_qr">Le të skanohet ky kod nga dërguesi.</string>
   <string name="request_coins_fragment_initiate_request_nfc">Ose përdor pajisje me NFC</string>
-  <string name="request_coins_clipboard_msg">Kërkesa për Digitalcoin është kompjuar në memorje</string>
-  <string name="request_coins_share_dialog_title">Ndaje kërkesën për Digitalcoins</string>
+  <string name="request_coins_clipboard_msg">Kërkesa për MaxCoin është kompjuar në memorje</string>
+  <string name="request_coins_share_dialog_title">Ndaje kërkesën për MaxCoins</string>
   <string name="request_coins_no_local_app_msg">Nuk është gjetur asnjë program tjetër për digitalcoin</string>
   <string name="request_coins_options_local_app_title">Kërkes nga program lokal</string>
   <string name="address_book_activity_title">Libri i adresave</string>
@@ -122,7 +122,7 @@
   <string name="address_book_list_receiving_random">Adresat e vjetra</string>
   <string name="address_book_list_sending_title">Duke dërguar adresat</string>
   <string name="address_book_empty_text">Nuk ka asnjë shënim në librin e adresave</string>
-  <string name="address_book_context_send_title">Dërgo Digitalcoins tek adresa</string>
+  <string name="address_book_context_send_title">Dërgo MaxCoins tek adresa</string>
   <string name="address_book_context_edit_title">Ndrysho adresën</string>
   <string name="address_book_context_remove_title">Fshije adresën</string>
   <string name="address_book_context_copy_to_clipboard_title">Kopjo në klipbord</string>
@@ -192,7 +192,7 @@
   <string name="scan_camera_problem_dialog_message">Ka një problem me kamerën, ju duhet ndoshta të ristartoni pajisjen tuaj.</string>
   <string name="input_parser_io_error">Nuk mund të lexojë: \n%s</string>
   <string name="input_parser_cannot_classify">Nuk mund të njoh hyrjen:\n%s</string>
-  <string name="input_parser_invalid_bitcoin_uri">Jovalid Digitalcoin URI:\n%s</string>
+  <string name="input_parser_invalid_bitcoin_uri">Jovalid MaxCoin URI:\n%s</string>
   <string name="input_parser_invalid_address">Bitcoin adresë jovalide!\(Keni ngatërruar mainnet/testnet?)</string>
   <string name="input_parser_unverifyable_paymentrequest">Nuk mund të verifikohet kërkesa për pages:\n%s</string>
   <string name="input_parser_invalid_paymentrequest">Kërkes jo valide për pages:\n%s</string>
