--- a/wallet/res/values-sv/strings.xml
+++ b/wallet/res/values-sv/strings.xml
@@ -11,7 +11,7 @@
   <string name="blockchain_state_progress_stalled">Synkroniseringen har avstannat</string>
   <string name="blockchain_state_progress_problem_storage">Synkronisering: Lagringsproblem</string>
   <string name="blockchain_state_progress_problem_network">Synkronisering: Nätverksproblem</string>
-  <string name="wallet_address_fragment_clipboard_msg">Digitalcoinadressen kopierades</string>
+  <string name="wallet_address_fragment_clipboard_msg">MaxCoinadressen kopierades</string>
   <string name="wallet_balance_fragment_too_much">Det här är ett väldigt stort belopp att bära runt på i fickan, överväg att flytta över lite till en säkrare plats.</string>
   <string name="wallet_balance_fragment_replaying">Saldot är inte tillgängligt under reprisen.</string>
   <string name="exchange_rates_activity_title">Växlingskurser</string>
@@ -196,7 +196,7 @@
   <string name="scan_camera_problem_dialog_message">Kameran har ett problem. Du behöver antagligen starta om enheten.</string>
   <string name="input_parser_io_error">Kan inte läsa av data:\n%s</string>
   <string name="input_parser_cannot_classify">Kan inte känna igen inmatning:\n%s</string>
-  <string name="input_parser_invalid_bitcoin_uri">Ogiltig Digitalcoin URI:\n%s</string>
+  <string name="input_parser_invalid_bitcoin_uri">Ogiltig MaxCoin URI:\n%s</string>
   <string name="input_parser_invalid_address">Fick en ogiltig digitalcoinadress!\n(Blandar du ihop Mainnet/Testnet?)</string>
   <string name="input_parser_unverifyable_paymentrequest">Kan inte verifiera betalningsförfrågant:\n%s</string>
   <string name="input_parser_invalid_paymentrequest">Ogiltig betalningsförffrågan:\n%s</string>
@@ -261,8 +261,8 @@
   <string name="button_paste">Klistra in</string>
   <string name="button_share">Dela</string>
   <string name="button_set_as_default">Ange som standard</string>
-  <string name="button_request_coins">Ta emot Digitalcoins</string>
-  <string name="button_send_coins">Skicka Digitalcoins</string>
+  <string name="button_request_coins">Ta emot MaxCoins</string>
+  <string name="button_send_coins">Skicka MaxCoins</string>
   <string name="button_scan">Skanna</string>
   <string name="button_edit_address">Lägg till/ändra adress</string>
   <string name="button_settings">Inställningar</string>
