--- a/wallet/res/values-tr/strings.xml
+++ b/wallet/res/values-tr/strings.xml
@@ -11,7 +11,7 @@
   <string name="blockchain_state_progress_stalled">Eşleşme durdu</string>
   <string name="blockchain_state_progress_problem_storage">Eşleşme: Yedekleme sorunu</string>
   <string name="blockchain_state_progress_problem_network">Eşleşme: Şebeke sorunu</string>
-  <string name="wallet_address_fragment_clipboard_msg">Digitalcoin adresi panoya kopyalandı</string>
+  <string name="wallet_address_fragment_clipboard_msg">MaxCoin adresi panoya kopyalandı</string>
   <string name="wallet_balance_fragment_too_much">Bu meblağ cebinizde taşımak için oldukça fazladır. Birazını daha güvenli bir yere aktarınız.</string>
   <string name="wallet_balance_fragment_replaying">Tekrar sırasında bakiye kullanılamaz</string>
   <string name="exchange_rates_activity_title">Döviz kurları</string>
@@ -26,9 +26,9 @@
   <string name="wallet_transactions_fragment_tab_received">Alınan</string>
   <string name="wallet_transactions_fragment_tab_all">İkisi</string>
   <string name="wallet_transactions_fragment_tab_sent">Yollanan</string>
-  <string name="wallet_transactions_fragment_empty_text_received">Şimdiye kadar hiçbir Digitalcoin alınmadı</string>
-  <string name="wallet_transactions_fragment_empty_text_sent">Şimdiye kadar hiçbir Digitalcoin gönderilmedi</string>
-  <string name="wallet_transactions_fragment_empty_text_howto">Nasıl Digitalcoin elde edilir?\n\nGeleneksel para ile satın alabilir,\nhizmet veya mal satabilir ya da\nçalışarak kazanabilirsiniz.</string>
+  <string name="wallet_transactions_fragment_empty_text_received">Şimdiye kadar hiçbir MaxCoin alınmadı</string>
+  <string name="wallet_transactions_fragment_empty_text_sent">Şimdiye kadar hiçbir MaxCoin gönderilmedi</string>
+  <string name="wallet_transactions_fragment_empty_text_howto">Nasıl MaxCoin elde edilir?\n\nGeleneksel para ile satın alabilir,\nhizmet veya mal satabilir ya da\nçalışarak kazanabilirsiniz.</string>
   <string name="wallet_transactions_row_warning_backup">Tebrikler, ilk ödemenizi almış bulunuyorsunuz! Kayba karşı korunmak için &lt;u&gt;cüzdanınızı yedeklediniz mi&lt;/u&gt;?</string>
   <string name="wallet_transactions_fragment_coinbase">oluşturulan</string>
   <string name="wallet_transactions_fragment_internal">Dahili</string>
@@ -39,7 +39,7 @@
   <string name="wallet_options_donate">Bağış</string>
   <string name="wallet_donate_address_label">Bu yazılıma bağış yap</string>
   <string name="wallet_low_storage_dialog_title">Dahili depolama alanı düşük!</string>
-  <string name="wallet_low_storage_dialog_msg">Digitalcoin cüzdanı muameleleri ve blokları hatırlamak için dahili depolama alanını kullanır. Bu alan yetersiz kalırsa cüzdan çalışmayı durduracak ve Digitalcoinleriniz risk altında kalacaktır!\n\nKullanılmayan uygulamaları kaldırmak için Uygulama Yöneticisini başlatmak ister misiniz?</string>
+  <string name="wallet_low_storage_dialog_msg">MaxCoin cüzdanı muameleleri ve blokları hatırlamak için dahili depolama alanını kullanır. Bu alan yetersiz kalırsa cüzdan çalışmayı durduracak ve MaxCoinleriniz risk altında kalacaktır!\n\nKullanılmayan uygulamaları kaldırmak için Uygulama Yöneticisini başlatmak ister misiniz?</string>
   <string name="wallet_low_storage_dialog_button_apps">Uygulamaları yönet</string>
   <string name="wallet_timeskew_dialog_title">Saat ayarınızı kontrol ediniz!</string>
   <string name="wallet_timeskew_dialog_msg">Cihazınızın saati %d dakika gecikmiş ya da ileride. Muhtemelen bu problem sebebiyle digitalcoin alamayacaksınız ve yollayamayacaksınız.\n\nSaat ve zaman diliminizi kontrol edip düzeltmeniz gerekir.</string>
@@ -58,7 +58,7 @@
   <string name="send_coins_fragment_payee_verified_by_unknown">bilinmiyor</string>
   <string name="send_coins_fragment_receiving_address_label">Şuna öde</string>
   <string name="send_coins_fragment_receiving_address_hint">adını veya adresini giriniz</string>
-  <string name="send_coins_fragment_receiving_address_error">Geçersiz Digitalcoin adresi!</string>
+  <string name="send_coins_fragment_receiving_address_error">Geçersiz MaxCoin adresi!</string>
   <string name="send_coins_fragment_receiving_address_complex">karmaşık\nadres</string>
   <string name="send_coins_fragment_pending">(%s teyit bekliyor)</string>
   <string name="send_coins_fragment_amount_label">Ödenecek miktar</string>
@@ -84,7 +84,7 @@
   <string name="send_coins_sending_msg">Gönderiliyor…</string>
   <string name="send_coins_sent_msg">Gönderildi!</string>
   <string name="send_coins_failed_msg">Başarısız oldu!</string>
-  <string name="send_coins_error_msg">Digitalcoin gönderimi sırasında problem oluştu!</string>
+  <string name="send_coins_error_msg">MaxCoin gönderimi sırasında problem oluştu!</string>
   <string name="send_coins_options_priority">Çabuk teyit, daha yüksek ücret</string>
   <string name="send_coins_options_empty">Boş cüzdan</string>
   <string name="send_coins_address_context_clear_title">Yeni adres gir</string>
@@ -111,14 +111,14 @@
   <string name="maintenance_dialog_state_decrypting">Şifre çözülüyor…</string>
   <string name="maintenance_dialog_state_done">Tamamlandı.</string>
   <string name="maintenance_dialog_button_move">Taşı</string>
-  <string name="request_coins_activity_title">Digitalcoin talebi</string>
+  <string name="request_coins_activity_title">MaxCoin talebi</string>
   <string name="request_coins_fragment_amount_label">Talep edilen miktar (seçime dayalı)</string>
   <string name="request_coins_fragment_accept_bluetooth_payment">Daha güvenilir işleme için ödemeyi Bluetooth vasıtasıyla kabul et</string>
   <string name="request_coins_fragment_initiate_request_qr">Bu kodu gönderici tarafından taratın.</string>
   <string name="request_coins_fragment_initiate_request_nfc">Ya da NFC destekli bir cihaz ile dokunun.</string>
-  <string name="request_coins_clipboard_msg">Digitalcoin talebi panoya kopyalandı</string>
-  <string name="request_coins_share_dialog_title">Digitalcoin talebini yayınla…</string>
-  <string name="request_coins_no_local_app_msg">Başka bir Digitalcoin uygulaması bulunamadı</string>
+  <string name="request_coins_clipboard_msg">MaxCoin talebi panoya kopyalandı</string>
+  <string name="request_coins_share_dialog_title">MaxCoin talebini yayınla…</string>
+  <string name="request_coins_no_local_app_msg">Başka bir MaxCoin uygulaması bulunamadı</string>
   <string name="request_coins_options_local_app_title">Yerel uygulamadan talep</string>
   <string name="address_book_activity_title">Adres defteri</string>
   <string name="address_book_list_receiving_title">Alım adresleri</string>
@@ -200,7 +200,7 @@
   <string name="scan_camera_problem_dialog_message">Fotoğraf makinesinde bir problem var. Muhtemelen cihazınızı yeniden başlatmanız gerekiyor.</string>
   <string name="input_parser_io_error">Veri okunamadı:\n%s</string>
   <string name="input_parser_cannot_classify">Girdi tanınamadı:\n%s</string>
-  <string name="input_parser_invalid_bitcoin_uri">Geçersiz Digitalcoin URI\'si:\n%s</string>
+  <string name="input_parser_invalid_bitcoin_uri">Geçersiz MaxCoin URI\'si:\n%s</string>
   <string name="input_parser_invalid_address">Geçersiz digitalcoin adresi alındı!\n(esas ağ ile deneme ağı karışmış olmasın?)</string>
   <string name="input_parser_unverifyable_paymentrequest">Ödeme talebi denetlenemedi:\n%s</string>
   <string name="input_parser_invalid_paymentrequest">Geçersiz ödeme talebi:\n%s</string>
