--- a/wallet/res/values-uk/strings.xml
+++ b/wallet/res/values-uk/strings.xml
@@ -36,7 +36,7 @@
   <string name="wallet_options_donate">Пожертвувати</string>
   <string name="wallet_donate_address_label">Пожертвування для digitalcoin Wallet</string>
   <string name="wallet_low_storage_dialog_title">Недостатньо внутрішньої пам\'яті на пристрої!</string>
-  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet використовує внутрішю пам\'ять для збереження транзакцій і блоків. Якщо вона закінчиться, додаток перестане працювати, що загрожуватиме вмісту Digitalcoin-гаманця!\n\nВідкрити «Управління додатками», щоб видалити непотрібні додатки?</string>
+  <string name="wallet_low_storage_dialog_msg">MaxCoin Wallet використовує внутрішю пам\'ять для збереження транзакцій і блоків. Якщо вона закінчиться, додаток перестане працювати, що загрожуватиме вмісту MaxCoin-гаманця!\n\nВідкрити «Управління додатками», щоб видалити непотрібні додатки?</string>
   <string name="wallet_low_storage_dialog_button_apps">Керування додатками</string>
   <string name="wallet_timeskew_dialog_title">Перевірте налаштування часу!</string>
   <string name="wallet_timeskew_dialog_msg">Час на вашому пристрої відстає на %d хвилин.  Можливо, через це вам не вдасться відправляти или отримувати digitalcoin.\n\nПеревірте та виправте час, а також параметри часового поясу.</string>
@@ -55,7 +55,7 @@
   <string name="send_coins_fragment_payee_verified_by_unknown">невідомо</string>
   <string name="send_coins_fragment_receiving_address_label">Оплатити</string>
   <string name="send_coins_fragment_receiving_address_hint">введіть адресу чи ім\'я</string>
-  <string name="send_coins_fragment_receiving_address_error">Неправильна Digitalcoin адреса!</string>
+  <string name="send_coins_fragment_receiving_address_error">Неправильна MaxCoin адреса!</string>
   <string name="send_coins_fragment_receiving_address_complex">коплекс\nадресу</string>
   <string name="send_coins_fragment_pending">(%s очікування підтвердження) </string>
   <string name="send_coins_fragment_amount_label">Сума платежу</string>
@@ -92,9 +92,9 @@
   <string name="request_coins_fragment_accept_bluetooth_payment">Прийом платежів через Bluetooth для надійнішої обробки транзакції</string>
   <string name="request_coins_fragment_initiate_request_qr">Хай відправник відсканує цей код.</string>
   <string name="request_coins_fragment_initiate_request_nfc">Або торкніться пристрою з підтримкою NFC.</string>
-  <string name="request_coins_clipboard_msg">Запит отримання Digitalcoin-монет скопійований</string>
-  <string name="request_coins_share_dialog_title">Поділитись запитом Digitalcoin-монет…</string>
-  <string name="request_coins_no_local_app_msg">Немає жодних інших Digitalcoin додатків</string>
+  <string name="request_coins_clipboard_msg">Запит отримання MaxCoin-монет скопійований</string>
+  <string name="request_coins_share_dialog_title">Поділитись запитом MaxCoin-монет…</string>
+  <string name="request_coins_no_local_app_msg">Немає жодних інших MaxCoin додатків</string>
   <string name="request_coins_options_local_app_title">Запит від локального пристрою</string>
   <string name="address_book_activity_title">Адресна книга</string>
   <string name="address_book_list_receiving_title">Ваші адреси</string>
@@ -158,8 +158,8 @@
   <string name="scan_camera_problem_dialog_message">Проблема з камерою. Можливо, вам потрібо перезавантажити пристрій.</string>
   <string name="input_parser_io_error">Не вдається прочитати дані:\n%s</string>
   <string name="input_parser_cannot_classify">Не вдається розпізнати вхід:\n%s</string>
-  <string name="input_parser_invalid_bitcoin_uri">Некоректна Digitalcoin-адреса:\n%s</string>
-  <string name="input_parser_invalid_address">Отримано некоректну Digitalcoin адесу!\n(Переплутані mainnet/testnet?)</string>
+  <string name="input_parser_invalid_bitcoin_uri">Некоректна MaxCoin-адреса:\n%s</string>
+  <string name="input_parser_invalid_address">Отримано некоректну MaxCoin адесу!\n(Переплутані mainnet/testnet?)</string>
   <string name="input_parser_unverifyable_paymentrequest">Не вдається перевірити запит на оплату:\n%s</string>
   <string name="input_parser_invalid_paymentrequest">Недопустимий запит на оплату:\n%s</string>
   <string name="input_parser_invalid_transaction">Помилкова транзакція:\n%s</string>
