--- a/wallet/res/values-vi/strings.xml
+++ b/wallet/res/values-vi/strings.xml
@@ -11,7 +11,7 @@
 	<string name="blockchain_state_progress_stalled">Tiến trình đồng bộ hóa đã ngưng lại</string>
 	<string name="blockchain_state_progress_problem_storage">Đồng bộ hóa: Gặp vấn đề về dung lượng lưu trữ</string>
 	<string name="blockchain_state_progress_problem_network">Đồng bộ hóa: Vấn đề về mạng lưới</string>
-	<string name="wallet_address_fragment_clipboard_msg">Địa chỉ Digitalcoin đã được sao chép vào bộ nhớ ảo</string>
+	<string name="wallet_address_fragment_clipboard_msg">Địa chỉ MaxCoin đã được sao chép vào bộ nhớ ảo</string>
 	<string name="wallet_balance_fragment_replaying">Tính năng cân bằng tài khoản không thể được thao tác trong quá trình replay.</string>
 	<string name="exchange_rates_activity_title">Tỉ lệ hoán đổi</string>
 	<string name="exchange_rates_fragment_empty_text">Không thể tải tỉ lệ hoán đổi</string>
@@ -46,7 +46,7 @@
 	<string name="send_coins_activity_title">Gửi digitalcoin</string>
 	<string name="send_coins_fragment_receiving_address_label">Trả cho</string>
 	<string name="send_coins_fragment_receiving_address_hint">loại địa chỉ hoặc tên</string>
-	<string name="send_coins_fragment_receiving_address_error">Địa chỉ Digitalcoin không hợp lệ!</string>
+	<string name="send_coins_fragment_receiving_address_error">Địa chỉ MaxCoin không hợp lệ!</string>
 	<string name="send_coins_fragment_pending">(%s đợi xác nhận)</string>
 	<string name="send_coins_fragment_amount_label">Số lượng chi trả</string>
 	<string name="send_coins_fragment_button_send">Gửi</string>
